      GSL, Netlib or Lapack built-in. Under Ubuntu, update-alternatives allows
      to switch during runtime between OpenBLAS, Atlas and Netlib
    . Remove vpMbEdgeMultiTracker, vpMbEdgeKltMultiTracker and vpMbKltMultiTracker
      deprecated classes. Use rather vpMbGenericTracker
    . visp.pc file used by pkg-config and visp-config script updated to
      be able to build a project that uses ViSP as 3rd party without CMake 
  - Tutorials
    . New tutorial: Basic linear algebra operations
    . New tutorial: How to create and build a project that uses ViSP without CMake
  - Bug fixed
    . [#713] 3.3.0 build fails on non-linux systems: fatal error: 'linux/serial.h'
      file not found
    . [#716] Build issue on FreeBSD with g++
    . [#718] vpImage<unsigned char>::getValue() is not working on big endian arch
    . [#726] Segfault in vpServo when the number of visual features is very
      large (> 50.000)
    . [#728] vpProjectionDisplay doesn't display frame with RGB colors respectively
      for X, Y and Z axis
    . [#731] Link issues using pkgconfig with static libraries
    . [#735] MKL and GSL Blas/Lapack 3rd parties incompatibility
----------------------------------------------
ViSP 3.3.0 (released February 14, 2020)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Gatien Gaumerais, Yasutomo Shirahama, Yash Kapoor, Noura Neji,
      Rahaf Rahal, Romain Lagneau, ahfuzhang, Franco Fusco, Olivier Kermorgant,
      Alexander Oliva
  - New features and improvements
    . Upgrade to new AprilTag3 version. Note that TAG_36h10, TAG_25h7 and
      TAG_36ARTOOLKIT are deprecated and that new families: TAG_CIRCLE21h7,
      TAG_CIRCLE49h12, TAG_CUSTOM48h12, TAG_STANDARD41h12, TAG_STANDARD52h13
      are supported. AprilTag detection time is reduced
    . Remove libxml2 3rd party dependency to use pugixml built-in 
    . Replace pthreads-win32 for POSIX threads for windows 3rd party with