@@ -252,6 +252,7 @@ set(VISP_HAVE_REALSENSE2     "@VISP_HAVE_REALSENSE2@")
 set(VISP_HAVE_SOQT           "@VISP_HAVE_SOQT@")
 set(VISP_HAVE_SOWIN          "@VISP_HAVE_SOWIN@")
 set(VISP_HAVE_SOXT           "@VISP_HAVE_SOXT@")
+set(VISP_HAVE_TAKKTILE2      "@VISP_HAVE_TAKKTILE2@")
 set(VISP_HAVE_V4L2           "@VISP_HAVE_V4L2@")
 set(VISP_HAVE_VIPER650       "@VISP_HAVE_VIPER650@")
 set(VISP_HAVE_VIPER850       "@VISP_HAVE_VIPER850@")
