@@ -2133,6 +2133,7 @@ PREDEFINED             = @DOXYGEN_SHOULD_SKIP_THIS@ \
                          VISP_HAVE_SOWIN \
                          VISP_HAVE_SOQT \
                          VISP_HAVE_SOXT \
+                         VISP_HAVE_TAKKTILE2 \
                          VISP_HAVE_V4L2 \
                          VISP_HAVE_VIPER650 \
                          VISP_HAVE_VIPER650_DATA \
