@@ -164,7 +164,12 @@ if(WITH_QBDEVICE)
   include_directories(${QBDEVICE_INCLUDE_DIRS})
 endif()
 
-vp_add_module(robot visp_core OPTIONAL visp_io visp_gui visp_sensor PRIVATE_OPTIONAL ${QBDEVICE_LIBRARIES})
+if(WITH_TAKKTILE2)
+  # reflex-takktile2 is private
+  include_directories(${TAKKTILE2_INCLUDE_DIRS})
+endif()
+
+vp_add_module(robot visp_core OPTIONAL visp_io visp_gui visp_sensor PRIVATE_OPTIONAL ${QBDEVICE_LIBRARIES} ${TAKKTILE2_LIBRARIES})
 vp_glob_module_sources()
 
 vp_set_source_file_compile_flag(src/wireframe-simulator/vpKeyword.cpp -Wno-sign-conversion)
