@@ -21,7 +21,9 @@ ViSP 3.3.1 (under development)
     . Remove vpMbEdgeMultiTracker, vpMbEdgeKltMultiTracker and vpMbKltMultiTracker
       deprecated classes. Use rather vpMbGenericTracker
     . visp.pc file used by pkg-config and visp-config script updated to
-      be able to build a project that uses ViSP as 3rd party without CMake 
+      be able to build a project that uses ViSP as 3rd party without CMake
+    . New vpReflexTakktile2 class and examples to control Reflex Takktile 2 hand
+      from Right Hand Robotics.
   - Tutorials
     . New tutorial: Basic linear algebra operations
     . New tutorial: How to create and build a project that uses ViSP without CMake
